[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/event_chain/editor/src/editor/gui/create_template.gd" type="Script" id=1]

[node name="LoadOrCreateTemplate" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 265.0
margin_right = 1010.0
margin_bottom = 297.0
rect_min_size = Vector2( 0, 32 )
text = "Load an existing template or create a new one"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 301.0
margin_right = 1010.0
margin_bottom = 321.0
alignment = 1

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 455.0
margin_right = 497.0
margin_bottom = 20.0
text = "Load"

[node name="CreateButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 501.0
margin_right = 554.0
margin_bottom = 20.0
text = "Create"

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
rect_min_size = Vector2( 400, 140 )
window_title = "Create a new graph template"
resizable = true
dialog_hide_on_ok = true
mode_overrides_title = false
filters = PoolStringArray( "*.egraph" )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_load_template_request"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CreateButton" to="." method="_on_create_template_request"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_selected"]
